--- a/src/dotnet/TechTalksConsumer/TechTalksConsumer.csproj
+++ b/src/dotnet/TechTalksConsumer/TechTalksConsumer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapr.AspnetCore" Version="1.9.0" />
+    <PackageReference Include="Dapr.client" Version="1.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
