--- a/src/dotnet/Dockerfile-TechTalksProducer
+++ b/src/dotnet/Dockerfile-TechTalksProducer
@@ -2,10 +2,10 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build-env
 
 WORKDIR /app
 
-COPY TechTalksMQProducer /TechTalksMQProducer/
+COPY producer /producer/
 COPY TechTalksModel /TechTalksModel/
 
-WORKDIR /TechTalksMQProducer
+WORKDIR /producer
 RUN dotnet restore
 
 RUN dotnet publish --configuration Release --output releaseOutput --no-restore
@@ -13,8 +13,8 @@ RUN dotnet publish --configuration Release --output releaseOutput --no-restore
 #build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine
 
-WORKDIR /TechTalksMQProducer
+WORKDIR /producer
 
-COPY --from=build-env /TechTalksMQProducer/releaseOutput ./
+COPY --from=build-env /producer/releaseOutput ./
 
-ENTRYPOINT ["dotnet", "TechTalksMQProducer.dll"]
+ENTRYPOINT ["dotnet", "producer.dll"]
