updated settings to connect to container

--- a/src/dotnet/producer/appsettings.json
+++ b/src/dotnet/producer/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "https_port": 443
+  "AllowedHosts": "*"
+  // "https_port": 443
 }
