updated depricated field, improved logging

--- a/Components/pubsub.yaml
+++ b/Components/pubsub.yaml
@@ -6,7 +6,7 @@ spec:
   type: pubsub.rabbitmq
   version: v1
   metadata:
-  - name: host
+  - name: connectionString
     value: "amqp://guest:guest@localhost:5672/"
   - name: durable
     value: true
