reverted the port back to 6000 to map with dapr port

--- a/Components/pubsub.yaml
+++ b/Components/pubsub.yaml
@@ -19,5 +19,7 @@ spec:
   - name: reconnectWait
     value: 0
   - name: concurrencyMode
-    value: single
+    value: single  
+  - name: exchangeKind
+    value: fanout
   
