Added code for java consumer

--- a/src/java/techtalks-consumer/pom.xml
+++ b/src/java/techtalks-consumer/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.nileshgule</groupId>
-	<artifactId>techtalks-producer</artifactId>
+	<artifactId>techtalks-consumer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>techtalks-producer</name>
-	<description>TechTalks Producer</description>
+	<name>techtalks-consumer</name>
+	<description>TechTalks consumer</description>
 	<properties>
 		<java.version>19</java.version>
 	</properties>
@@ -33,20 +33,15 @@
 			<version>1.7.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.github.javafaker</groupId>
-			<artifactId>javafaker</artifactId>
-			<version>1.0.2</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.22</version>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
