--- a/k8s/Dapr-components/pubsub.yaml
+++ b/k8s/Dapr-components/pubsub.yaml
@@ -8,6 +8,7 @@ spec:
   metadata:
   - name: connectionString
     # value: "amqp://guest:guest@localhost:5672/"
+    # value: "amqp://user:PASSWORD@rabbitmq.default.svc.cluster.local:5672"
     value: "amqp://user:PASSWORD@rabbitmq:5672"
   - name: durable
     value: true
