--- a/k8s/TechTalksConsumer/consumer-deployment.yml
+++ b/k8s/TechTalksConsumer/consumer-deployment.yml
@@ -21,23 +21,14 @@ spec:
         dapr.io/enabled: "true"
         dapr.io/app-id: "techtalks-consumer"
         dapr.io/app-port: "80"
-        dapr.io/config: "zipkin"
+        # dapr.io/app-port: "8080"
+        # dapr.io/config: "zipkin"
+        # dapr.io/sidecar-liveness-probe-delay-seconds: "60"
     spec:
       containers:
         - name: rabbitmq-consumer
-          image: ngacrregistry.azurecr.io/nileshgule/techtalksconsumer:dapr
-          # image: nileshgule/techtalksconsumer:rabbitmq-keda-5.0
-          env:
-            - name: ASPNETCORE_ENVIRONMENT
-              value: "Development"
-            - name: RABBITMQ_HOST_NAME
-              value: "20.212.110.83"
-            - name: RABBITMQ_USER_NAME
-              value: "user"
-            - name: RABBITMQ_PASSWORD
-              value: "tCUN6UizuwTZ"
-            - name: RABBITMQ_BATCH_SIZE
-              value: "75"
+          image: ngacrregistry.azurecr.io/techtalksconsumer:dotnet
+          # image: ngacrregistry.azurecr.io/techtalksconsumer:java
           resources:
             requests:
               cpu: "10m" #1% of a core
