--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -22,28 +22,18 @@ spec:
         dapr.io/enabled: "true"
         dapr.io/app-id: "rabbitmq-producer"
         dapr.io/app-port: "80"
-        dapr.io/config: "zipkin"
+        # dapr.io/app-port: "8080"
+        # dapr.io/config: "zipkin"
+        # dapr.io/sidecar-liveness-probe-delay-seconds: "60"
     spec:
       containers:
         - name: techtalksproducer
-          image: ngacrregistry.azurecr.io/nileshgule/techtalksproducer:dapr
-          # image: nileshgule/techtalksproducer:rabbitmq-keda-5.0
+          image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
+          # image: ngacrregistry.azurecr.io/techtalksproducer:java
           
-          env:
-            # - name: ASPNETCORE_URLS
-            #   value: http://0.0.0.0:8080
-            - name: RABBITMQ_HOST_NAME
-              value: "rabbitmq"
-            - name: RABBITMQ_USER_NAME
-              value: "user"
-            - name: RABBITMQ_PASSWORD
-              value: "PASSWORD"
-            # - name: RABBITMQ_HOST_NAME
-            #   value: "20.212.110.83"
-            # - name: RABBITMQ_USER_NAME
-            #   value: "user"
-            # - name: RABBITMQ_PASSWORD
-            #   value: "tCUN6UizuwTZ"
+          # env:
+          #   - name: ASPNETCORE_ENVIRONMENT
+          #     value: Development
           ports:
             # - containerPort: 8080
             - containerPort: 80
