--- a/src/java/Dockerfile-TechTalksProducer
+++ b/src/java/Dockerfile-TechTalksProducer
@@ -1,4 +1,4 @@
-FROM openjdk:19-jdk-slim as build
+FROM eclipse-temurin:19.0.1_10-jdk-alpine as build
 
 WORKDIR /app
 
@@ -8,7 +8,8 @@ WORKDIR /techtalks-Producer
 
 RUN mvn clean package
 
-FROM openjdk:19-jdk-slim
-COPY --from=build /techtalks-Producer/target/*.jar TechTalksProducer.jar
-EXPOSE 80
+FROM eclipse-temurin:19-jre-alpine
+COPY --from=build /techtalks-producer/target/techtalks-producer-0.0.1-SNAPSHOT.jar TechTalksProducer.jar
+
+EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "TechTalksProducer.jar"]
