--- a/k8s/Dapr-components/pubsub.yaml
+++ b/k8s/Dapr-components/pubsub.yaml
@@ -9,7 +9,8 @@ spec:
   - name: connectionString
     # value: "amqp://guest:guest@localhost:5672/"
     # value: "amqp://user:PASSWORD@rabbitmq.default.svc.cluster.local:5672"
-    value: "amqp://user:PASSWORD@rabbitmq:5672"
+    value: "amqp://user:nHBCl4gv3fBX@20.212.145.182:5672"
+    # value: "amqp://user:PASSWORD@rabbitmq:5672"
   - name: durable
     value: true
   - name: deletedWhenUnused
