Removed hardcoded RabbitMQ connection string and referenced the values from K8s secret

--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -31,9 +31,9 @@ spec:
           image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
           # image: ngacrregistry.azurecr.io/techtalksproducer:java
           
-          # env:
-          #   - name: ASPNETCORE_ENVIRONMENT
-          #     value: Development
+          env:
+            - name: ASPNETCORE_ENVIRONMENT
+              value: Development
           ports:
             # - containerPort: 8080
             - containerPort: 80
