--- a/k8s/Dapr-components/pubsub.yaml
+++ b/k8s/Dapr-components/pubsub.yaml
@@ -7,10 +7,14 @@ spec:
   version: v1
   metadata:
   - name: connectionString
-    # value: "amqp://guest:guest@localhost:5672/"
-    # value: "amqp://user:PASSWORD@rabbitmq.default.svc.cluster.local:5672"
-    value: "amqp://user:nHBCl4gv3fBX@20.212.145.182:5672"
-    # value: "amqp://user:PASSWORD@rabbitmq:5672"
+    secretKeyRef:
+      name: keda-rabbitmq-secret
+      key: host
+  # - name: connectionString
+  #   # value: "amqp://guest:guest@localhost:5672/"
+  #   # value: "amqp://user:PASSWORD@rabbitmq.default.svc.cluster.local:5672"
+  #   value: "amqp://user:nHBCl4gv3fBX@20.212.145.182:5672"
+  #   # value: "amqp://user:PASSWORD@rabbitmq:5672"
   - name: durable
     value: true
   - name: deletedWhenUnused
