--- a/Components/local/pubsub.yaml
+++ b/Components/local/pubsub.yaml
@@ -8,7 +8,9 @@ spec:
   metadata:
   - name: connectionString
     # value: "amqp://guest:guest@localhost:5672/"
-    value: "amqp://user:PASSWORD@rabbitmq:5672"
+    secretKeyRef:
+      name: rabbitmq-secret
+      key: host
   - name: durable
     value: true
   - name: deletedWhenUnused
