--- a/src/dotnet/Dockerfile-v3-TechTalksProducer
+++ b/src/dotnet/Dockerfile-v3-TechTalksProducer
@@ -6,9 +6,11 @@ COPY producer /producer/
 COPY TechTalksModel /TechTalksModel/
 
 WORKDIR /producer
-RUN dotnet restore
+# RUN dotnet restore
 
-RUN dotnet publish --configuration Release --output releaseOutput --no-restore
+RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages dotnet restore
+
+RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages dotnet publish --configuration Release --output releaseOutput --no-restore
 
 #build runtime image with Alpine base image
 FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine
