--- a/Components/local/pubsub.yaml
+++ b/Components/local/pubsub.yaml
@@ -7,7 +7,7 @@ spec:
   version: v1
   metadata:
   - name: connectionString
-    # value: "amqp://guest:guest@localhost:5672/"
+    # value: "amqp://<<user>>:<<password>>@<<host>>:5672/"
     secretKeyRef:
       name: rabbitmq-secret
       key: host
