--- a/k8s/AutoScaledConsumer/01-secret-rabbitmq-host.yml
+++ b/k8s/AutoScaledConsumer/01-secret-rabbitmq-host.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: keda-rabbitmq-secret
+  name: rabbitmq-secret
 data:
   host: YW1xcDovL3VzZXI6UEFTU1dPUkRAcmFiYml0bXEuZGVmYXVsdC5zdmMuY2x1c3Rlci5sb2NhbDo1Njcy
   # host: 'amqp://user:PASSWORD@rabbitmq.default.svc.cluster.local:5672/rabbitmq'
