--- a/k8s/TechTalksConsumer/consumer-deployment-java.yml
+++ b/k8s/TechTalksConsumer/consumer-deployment-java.yml
@@ -21,6 +21,8 @@ spec:
         dapr.io/enabled: "true"
         dapr.io/app-id: "techtalks-consumer"
         dapr.io/app-port: "8080"
+        # dapr.io/app-health-probe-interval: "60"
+        # dapr.io/app-health-probe-timeout: "60"
     spec:
       containers:
         - name: rabbitmq-consumer
