modification done to run image locally on k8s with Docker Desktop

--- a/k8s/TechTalksConsumer/consumer-deployment-dotnet.yml
+++ b/k8s/TechTalksConsumer/consumer-deployment-dotnet.yml
@@ -24,7 +24,8 @@ spec:
     spec:
       containers:
         - name: rabbitmq-consumer
-          image: ngacrregistry.azurecr.io/techtalksconsumer:dotnet
+          # image: ngacrregistry.azurecr.io/techtalksconsumer:dotnet
+          image: nileshgule/techtalksconsumer:dotnet
           resources:
             requests:
               cpu: "10m" #1% of a core
