--- a/k8s/TechTalksProducer/producer-service.yml
+++ b/k8s/TechTalksProducer/producer-service.yml
@@ -11,8 +11,8 @@ metadata:
     dapr.io/app-port: "80"
     dapr.io/config: "zipkin"
 spec:
-  type: LoadBalancer
-  # type: ClusterIP
+  # type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
       targetPort: 80
