--- a/src/dotnet/Dockerfile-TechTalksConsumer
+++ b/src/dotnet/Dockerfile-TechTalksConsumer
@@ -7,16 +7,16 @@ COPY TechTalksModel /TechTalksModel/
 
 WORKDIR /consumer
 # RUN dotnet restore
+# RUN dotnet publish --configuration Release --output consumerRelease --no-restore
 
 RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages dotnet restore
-
-RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages dotnet publish --configuration Release --output releaseOutput --no-restore
+RUN --mount=type=cache,id=nuget,target=/root/.nuget/packages dotnet publish --configuration Release --output consumerRelease --no-restore
 
 #build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine
 
 WORKDIR /consumer
 
-COPY --from=build-env /consumer/releaseOutput ./
+COPY --from=build-env /consumer/consumerRelease ./
 
 ENTRYPOINT ["dotnet", "consumer.dll"]
