java dependency cache mount and Java 17 changes

--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -26,7 +26,8 @@ spec:
       containers:
         - name: techtalksproducer
           # image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
-          image: nileshgule/techtalksproducer:dotnet
+          # image: nileshgule/techtalksproducer:dotnet
+          image: nileshgule/techtalksproducer:java
           
           env:
             - name: ASPNETCORE_ENVIRONMENT
