--- a/src/java/techtalks-producer/Dockerfile
+++ b/src/java/techtalks-producer/Dockerfile
@@ -1,4 +1,5 @@
-FROM eclipse-temurin:19.0.1_10-jdk-alpine AS build
+# FROM eclipse-temurin:19.0.1_10-jdk-alpine AS build
+FROM eclipse-temurin:17-jdk-alpine AS build
 
 # FROM openjdk:19-alpine AS build
 
@@ -25,7 +26,8 @@ RUN --mount=type=cache,target=/root/.m2 ./mvnw package -DskipTests
 # Create the runtime image
 # FROM openjdk:19-alpine
 
-FROM eclipse-temurin:19-jre-alpine
+# FROM eclipse-temurin:19-jre-alpine
+FROM eclipse-temurin:17-jre-alpine
 
 # Set the working directory
 WORKDIR /app
