working go code with dokcer desktop based kubernetes cluster

--- a/src/go/consumer/Dockerfile
+++ b/src/go/consumer/Dockerfile
@@ -4,9 +4,9 @@ RUN mkdir /build
 # ADD *.go /build/
 COPY . /build/
 WORKDIR /build
-RUN CGO_ENABLED=0 GOOS=linux go build -a -o consumer .
+# RUN CGO_ENABLED=0 GOOS=linux go build -a -o consumer .
 
-RUN --mount=type=cache,target=/root/.cache/go-build \
+RUN --mount=type=cache,id=gobuild,target=/root/.cache/go-build \
     CGO_ENABLED=0 GOOS=linux go build -a -o consumer .
 
 
