--- a/src/java/techtalks-consumer/Dockerfile
+++ b/src/java/techtalks-consumer/Dockerfile
@@ -1,10 +1,6 @@
 # FROM eclipse-temurin:19.0.1_10-jdk-alpine AS build
 FROM eclipse-temurin:17-jdk-alpine AS build
 
-
-
-# FROM openjdk:19-alpine AS build
-
 # Set the working directory
 WORKDIR /app
 
@@ -16,16 +12,14 @@ COPY .mvn /app/.mvn
 # # Build the application
 # RUN ./mvnw package -DskipTests
 
-# RUN ./mvnw dependency:go-offline
-
+# RUN --mount=type=cache,target=/root/.m2 ./mvnw dependency
 
 # Copy the application files
 COPY src /app/src
 
 # Build the application
 # RUN ./mvnw package -DskipTests
-
-RUN --mount=type=cache,target=/root/.m2 ./mvnw package -DskipTests
+RUN --mount=type=cache,id=maven,target=/root/.m2 ./mvnw package -DskipTests
 
 # Create the runtime image
 # FROM openjdk:19-alpine
@@ -40,9 +34,8 @@ WORKDIR /app
 COPY --from=build /app/target/techtalks-consumer-0.0.1-SNAPSHOT.jar TechTalksConsumer.jar
 
 # Expose the application port
-# EXPOSE 8080
+EXPOSE 8080
 
 # Run the application
 ENTRYPOINT ["java", "-jar", "TechTalksConsumer.jar"]
-# ENTRYPOINT ["java", "-Djava.net.preferIPv4Stack=true", "-Djava.net.PreferIPv6Addresses=false", "-jar", "TechTalksConsumer.jar"]
 
