--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -21,19 +21,20 @@ spec:
       annotations:
         dapr.io/enabled: "true"
         dapr.io/app-id: "rabbitmq-producer"
-        dapr.io/app-port: "80"
+        dapr.io/app-port: "8080"
     spec:
       containers:
         - name: techtalksproducer
           # image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
           # image: nileshgule/techtalksproducer:dotnet
-          image: nileshgule/techtalksproducer:java
+          # image: nileshgule/techtalksproducer:java
+          image: nileshgule/techtalksproducer:go
           
           env:
             - name: ASPNETCORE_ENVIRONMENT
               value: Development
           ports:
-            - containerPort: 80
+            - containerPort: 8080
               protocol: TCP
           resources:
             requests:
