--- a/src/java/techtalks-producer/Dockerfile
+++ b/src/java/techtalks-producer/Dockerfile
@@ -1,8 +1,6 @@
 # FROM eclipse-temurin:19.0.1_10-jdk-alpine AS build
 FROM eclipse-temurin:17-jdk-alpine AS build
 
-# FROM openjdk:19-alpine AS build
-
 # Set the working directory
 WORKDIR /app
 
@@ -21,7 +19,7 @@ COPY src /app/src
 
 # Build the application
 # RUN ./mvnw package -DskipTests
-RUN --mount=type=cache,target=/root/.m2 ./mvnw package -DskipTests
+RUN --mount=type=cache,id=maven,target=/root/.m2 ./mvnw package -DskipTests
 
 # Create the runtime image
 # FROM openjdk:19-alpine
