--- a/src/java/techtalks-producer/pom.xml
+++ b/src/java/techtalks-producer/pom.xml
@@ -60,8 +60,21 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.3.1</version>
+				<configuration>
+					<from>
+						<!-- Use the sha to make sure it is reproducible this is based on eclipse-temurin:19-jre-alpine-->
+						<image>eclipse-temurin@sha256:dde223014bd6917ea00d9eb370add424dc5dfcbcfcb8e8efac15a050563d312e</image>
+					</from>
+					<to>
+						<image>balchu/dapr-techtalks-producer</image>
+					</to>
+					<container>
+						<mainClass>ccom.nileshgule.techtalksproducer.TechTalksProducerApplication</mainClass>
+					</container>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
