Added pdf version of part 7 slide deck

--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -27,13 +27,13 @@ spec:
       containers:
         - name: techtalksproducer
           # image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
-          image: nileshgule/techtalksproducer:dotnet
+          # image: nileshgule/techtalksproducer:dotnet
           # image: nileshgule/techtalksproducer:java
-          # image: nileshgule/techtalksproducer:go
+          image: nileshgule/techtalksproducer:go
           
-          env:
-            - name: ASPNETCORE_ENVIRONMENT
-              value: Development
+          # env:
+          #   - name: ASPNETCORE_ENVIRONMENT
+          #     value: Development
           ports:
             - containerPort: 8080
               protocol: TCP
