add skaffold build on go modules

--- a/src/go/consumer/Dockerfile
+++ b/src/go/consumer/Dockerfile
@@ -1,12 +1,16 @@
 # builder image
 FROM golang:1.20-alpine as builder
 RUN mkdir /build
-
-COPY . /build/
 WORKDIR /build
 
-RUN --mount=type=cache,id=gobuild,target=/root/.cache/go-build \
-    CGO_ENABLED=0 GOOS=linux go build -a -o consumer .
+COPY go.mod ./
+COPY go.sum ./
+
+# download dependencies only
+RUN go mod download
+
+COPY *go ./
+RUN CGO_ENABLED=0 GOOS=linux go build -a -o consumer .
 
 # generate clean, final image for end users
 FROM alpine:3.17
