--- a/src/go/producer/Dockerfile
+++ b/src/go/producer/Dockerfile
@@ -2,11 +2,17 @@
 FROM golang:1.20-alpine as builder
 RUN mkdir /build
 
-COPY . /build/
 WORKDIR /build
 
-RUN --mount=type=cache,id=gobuild,target=/root/.cache/go-build \
-    CGO_ENABLED=0 GOOS=linux go build -a -o producer .
+COPY go.mod ./
+COPY go.sum ./
+
+# download dependencies only
+RUN go mod download
+
+COPY *go ./
+
+RUN CGO_ENABLED=0 GOOS=linux go build -a -o producer .
 
 # generate clean, final image for end users
 FROM alpine:3.17
