--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,11 @@
 
 version: 2
 updates:
-  - package-ecosystem: "Maven, NuGet" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "maven" # See documentation for possible values
+    directory: "/src/java" # Location of package manifests
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "nuget" # See documentation for possible values
+    directory: "/src/dotnet" # Location of package manifests
     schedule:
       interval: "weekly"
