--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -21,23 +21,24 @@ spec:
       annotations:
         dapr.io/enabled: "true"
         dapr.io/app-id: "rabbitmq-producer"
-        dapr.io/app-port: "8080"
+        dapr.io/app-port: "80"
         dapr.io/config: "zipkin"
     spec:
       containers:
         - name: techtalksproducer
-          # image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
+          image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
           # image: ngacrregistry.azurecr.io/techtalksproducer:go
           # image: ngacrregistry.azurecr.io/techtalksproducer:java
           # image: nileshgule/techtalksproducer:dotnet
           # image: nileshgule/techtalksproducer:java
-          image: nileshgule/techtalksproducer:go
+          # image: nileshgule/techtalksproducer:go
           
           # env:
           #   - name: ASPNETCORE_ENVIRONMENT
           #     value: Development
           ports:
-            - containerPort: 8080
+            # - containerPort: 8080
+            - containerPort: 80
               protocol: TCP
           resources:
             requests:
