--- a/k8s/nginx-ingress/techtalks-ingress.yaml
+++ b/k8s/nginx-ingress/techtalks-ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    # nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   # ingressClassName: nginx
   rules:
@@ -18,5 +19,5 @@ spec:
           service:
             name: rabbitmq-producer-service
             port:
-              number: 8080
+              number: 80
         
