--- a/src/java/techtalks-producer/Dockerfile
+++ b/src/java/techtalks-producer/Dockerfile
@@ -1,4 +1,6 @@
-FROM eclipse-temurin:17-jdk-alpine AS build
+# FROM eclipse-temurin:17-jdk-alpine AS build
+FROM arm64v8/eclipse-temurin:17-jdk-jammy AS build
+
 
 # Set the working directory
 WORKDIR /app
@@ -12,11 +14,13 @@ COPY .mvn /app/.mvn
 COPY src /app/src
 
 # Build the application
+# RUN mvn clean install -DskipTests
 # RUN ./mvnw package -DskipTests
 RUN --mount=type=cache,id=maven,target=/root/.m2 ./mvnw package -DskipTests
 
 # Create the runtime image
-FROM eclipse-temurin:17-jre-alpine
+# FROM eclipse-temurin:17-jre-alpine
+FROM arm64v8/eclipse-temurin:17-jre-jammy
 
 # Set the working directory
 WORKDIR /app
