--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -22,7 +22,7 @@ spec:
         dapr.io/enabled: "true"
         dapr.io/app-id: "rabbitmq-producer"
         dapr.io/app-port: "8080"
-        dapr.io/config: "zipkin"
+        # dapr.io/config: "zipkin"
     spec:
       containers:
         - name: techtalksproducer
@@ -30,15 +30,15 @@ spec:
           # image: ngacrregistry.azurecr.io/techtalksproducer:go
           # image: ngacrregistry.azurecr.io/techtalksproducer:java
           # image: nileshgule/techtalksproducer:dotnet
-          # image: nileshgule/techtalksproducer:java
-          image: nileshgule/techtalksproducer:go
+          image: nileshgule/techtalksproducer:java
+          # image: nileshgule/techtalksproducer:go
           
           # env:
           #   - name: ASPNETCORE_ENVIRONMENT
           #     value: Development
           ports:
             - containerPort: 8080
-              protocol: TCP
+              # protocol: TCP
           resources:
             requests:
               cpu: "10m" #1% of a core
