--- a/.github/workflows/cloud-native-ninja-k8s-github-actions.yaml
+++ b/.github/workflows/cloud-native-ninja-k8s-github-actions.yaml
@@ -28,7 +28,7 @@ jobs:
                 subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
                 tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             - name: Build and push image to ACR
-              run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./src/dotnet/Dockerfile-v4-TechTalksProducer ./
+              run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./src/dotnet/Dockerfile-v3-TechTalksProducer src/dotnet
     deploy:
         permissions:
             actions: read
