--- a/k8s/TechTalksProducer/producer-deployment.yml
+++ b/k8s/TechTalksProducer/producer-deployment.yml
@@ -26,11 +26,11 @@ spec:
     spec:
       containers:
         - name: techtalksproducer
-          # image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
+          image: ngacrregistry.azurecr.io/techtalksproducer:dotnet
           # image: ngacrregistry.azurecr.io/techtalksproducer:go
           # image: ngacrregistry.azurecr.io/techtalksproducer:java
           # image: nileshgule/techtalksproducer:dotnet
-          image: nileshgule/techtalksproducer:java
+          # image: nileshgule/techtalksproducer:java
           # image: nileshgule/techtalksproducer:go
           
           # env:
