--- a/.github/workflows/cloud-native-ninja-k8s-github-actions.yaml
+++ b/.github/workflows/cloud-native-ninja-k8s-github-actions.yaml
@@ -28,7 +28,7 @@ jobs:
                 subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
                 tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             - name: Build and push image to ACR
-              run: az acr build --image ${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./src/dotnet/Dockerfile-v3-TechTalksProducer src/dotnet
+              run: az acr build --image ${{ env.CONTAINER_NAME }}:"dotnet" --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.ACR_RESOURCE_GROUP }} -f ./src/dotnet/Dockerfile-v3-TechTalksProducer src/dotnet
     deploy:
         permissions:
             actions: read
@@ -60,6 +60,6 @@ jobs:
               name: Deploys application
               with:
                 action: deploy
-                images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }}
+                images: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:"dotnet"
                 manifests: ${{ env.DEPLOYMENT_MANIFEST_PATH }}
                 namespace: namespace-workflow-1705220035178
