--- a/k8s/k8sgpt/k8sgpt-config.yaml
+++ b/k8s/k8sgpt/k8sgpt-config.yaml
@@ -18,10 +18,10 @@ spec:
   noCache: false
   repository: ghcr.io/k8sgpt-ai/k8sgpt
   version: v0.3.26
-  #integrations:
-  # trivy:
-  #  enabled: true
-  #  namespace: trivy-system
+  # integrations:
+  #   trivy:
+  #     enabled: true
+  # #  namespace: trivy-system
   # filters:
   #   - Ingress
   # sink:
