final changes before YT video recording for AKV integration

--- a/k8s/akv-integration/secretproviderclass.yaml
+++ b/k8s/akv-integration/secretproviderclass.yaml
@@ -7,12 +7,12 @@ spec:
   parameters:
     usePodIdentity: "false"
     useVMManagedIdentity: "true"          # Set to true for using managed identity
-    userAssignedIdentityID: $IDENTITY_OBJECT_ID   # Set the clientID of the user-assigned managed identity to use
-    keyvaultName: ngAkv        # Set to the name of your key vault
+    userAssignedIdentityID: "e7504414-43a3-4468-934c-6a85dfd531f9"   # Set the clientID of the user-assigned managed identity to use
+    keyvaultName: demo-akv-ng        # Set to the name of your key vault
     
     objects:  |
       array:
         - |
           objectName: AzureOpenAIAPIKey
           objectType: secret              # object types: secret, key, or cert
-    tenantId: $TENANTID   
+    tenantId: c5ec075b-004b-43dd-9cd6-07bfd286c174   
