Added a smaple backstage component

--- a/techtalks-helm-chart/techtalk/values.yaml
+++ b/techtalks-helm-chart/techtalk/values.yaml
@@ -13,6 +13,7 @@ techTalksProducer:
   labels:
     run: rabbitmq-producer
     app: techtalks
+    backstage.io/kubernetes-id: techtalks-producer-api
   service:
     type: ClusterIP
     port: 8080
