--- a/techtalks-helm-chart/techtalk/templates/TechTalksConsumer/consumer-deployment-go.yml
+++ b/techtalks-helm-chart/techtalk/templates/TechTalksConsumer/consumer-deployment-go.yml
@@ -5,7 +5,7 @@ metadata:
   name: rabbitmq-consumer-deployment
   
   labels:
-    {{- include "tecktalks.consumerLabels" . | nindent 4 }}
+    {{- include "techtalks.consumerLabels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
@@ -15,7 +15,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "tecktalks.consumerLabels" . | nindent 8 }}
+        {{- include "techtalks.consumerLabels" . | nindent 8 }}
       annotations:
         dapr.io/enabled: "true"
         dapr.io/app-id: "techtalks-consumer"
