Updated casing for backstage related tags

--- a/k8s/backstage/techtalks-producer-component.yaml
+++ b/k8s/backstage/techtalks-producer-component.yaml
@@ -7,9 +7,9 @@ metadata:
     backstage.io/kubernetes-id: techtalks-producer-api
   tags:
     - go
-    - Java
-    - KEDA
-    - Dapr
+    - java
+    - keda
+    - dapr
   links:
     - url: https://admin.example-org.com
       title: Admin Dashboard
