--- a/.github/workflows/cnn-workflow.yaml
+++ b/.github/workflows/cnn-workflow.yaml
@@ -33,6 +33,8 @@ jobs:
               run: az acr login --name ${{ env.AZURE_CONTAINER_REGISTRY }} 
             - name: Build the Docker image
               run: docker compose -f ./docker-compose-go-acr-ci.yml build 
+              env:
+                IMAGE_TAG: ${{ github.sha }}
     deploy:
         permissions:
             actions: read
