--- a/.github/workflows/cnn-workflow.yaml
+++ b/.github/workflows/cnn-workflow.yaml
@@ -35,6 +35,10 @@ jobs:
               run: docker compose -f ./docker-compose-go-acr-ci.yml build 
               env:
                 IMAGE_TAG: ${{ github.sha }}
+            - name: Push the Docker image
+                run: docker compose -f ./docker-compose-go-acr-ci.yml push
+                env:
+                    IMAGE_TAG: ${{ github.sha }}
     deploy:
         permissions:
             actions: read
