--- a/.github/workflows/cloud-native-ninja-ci-cd.yaml
+++ b/.github/workflows/cloud-native-ninja-ci-cd.yaml
@@ -9,7 +9,7 @@ env:
     AZURE_CONTAINER_REGISTRY: ngAcrRegistry
     CHART_OVERRIDE_PATH: ./techtalks-helm-chart/techtalk/values.yaml
     CHART_OVERRIDES: image.repository=ngAcrRegistry.azurecr.io/techtalksproducer,image.tag=${{ github.sha }}
-    CHART_PATH: ./techtalks-helm-chart
+    CHART_PATH: ./techtalks-helm-chart/techtalk
     CLUSTER_NAME: azure-singapore-cluster
     CLUSTER_RESOURCE_GROUP: demo-azure-singapore-rg
     CONTAINER_NAME: techtalksproducer
