--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -63,11 +63,13 @@ jobs:
             # mandatory
             -X 
             -Dsonar.projectKey=NileshGule_cloud-native-ninja
-            -Dsonar.organization=nileshgule-github
-            # Comma-separated paths to directories containing main source files.
-            -Dsonar.sources=src # optional, default is project base directory
+            -Dsonar.organization=nileshgule-github            
+            -Dsonar.sources=src 
+            -Dsonar.projectBaseDir=src 
+            # optional, default is project base directory            
+            # optional, default is .
             # When you need the analysis to take place in a directory other than the one from which it was launched
-            -Dsonar.projectBaseDir=src # optional, default is .
+            # Comma-separated paths to directories containing main source files.
             # Comma-separated paths to directories containing test source files.
             #-Dsonar.tests= # optional. For more info about Code Coverage, please refer to https://docs.sonarcloud.io/enriching/test-coverage/overview/
             # Adds more detail to both client and server-side analysis logs, activating DEBUG mode for the scanner, and adding client-side environment variables and system properties to the server-side log of analysis report processing.
